version 0.8
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- fixed rfs dentry addition for isofs, thanks to Vasiliy Novikov
	
version 0.7
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- used dget_locked instead of direct increase of d_count
          it allows redirfs to run at kernel with openvz patches
	- added callbacks
		REDIRFS_DIR_IOP_UNLINK
		REDIRFS_DIR_IOP_RMDIR
		REDIRFS_REG_IOP_SETATTR
		REDIRFS_DIR_IOP_SETATTR
		REDIRFS_LNK_IOP_SETATTR
		REDIRFS_CHR_IOP_SETATTR
		REDIRFS_BLK_IOP_SETATTR
		REDIRFS_FIFO_IOP_SETATTR
		REDIRFS_SOCK_IOP_SETATTR
		REDIRFS_NONE_DOP_D_REVALIDATE
		REDIRFS_REG_DOP_D_REVALIDATE
		REDIRFS_DIR_DOP_D_REVALIDATE
		REDIRFS_CHR_DOP_D_REVALIDATE
		REDIRFS_BLK_DOP_D_REVALIDATE
		REDIRFS_FIFO_DOP_D_REVALIDATE
		REDIRFS_LNK_DOP_D_REVALIDATE
		REDIRFS_SOCK_DOP_D_REVALIDATE
	- added might_sleep() macro into functions which can sleep
	- fixed locking in redirfs_get_path_id()
	- removed GFP_ATOMIC allocations where possible and added GFP_KERNEL
	  allocation fallbacks otherwise, BUG 14
	- better filter handle check in redirfs API, added IS_ERR check
	- fixed bind mount paths - two paths one root
	- added support for older kernels >= 2.6.16, thanks to Sergey Ivanov
	- fixed open with the O_DIRECTORY flag for non directory file types,
	  thanks to Sergey Ivanov
	- cifs is not supported
	  the -EPERM error is returned when path is to be added within cifs

version 0.6
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- fixed bug 13 - oops BUG at rfs_inode.c:306!

version 0.5
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- fixed NULL pointer dereference in rfs_fsrename_set

version 0.4
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- added support for private data - file, dentry, inode, redirfs root
	- introduced redirfs_root handle representing redirfs root object
	- simplified sysfs interface
	- small changes in the redirfs interface (not compatible with previous
	  versions)